--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,11 +2,11 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
-//$header-bg: #263347;
-//$subtitle-color: lighten($header-bg, 58);
-//$nav-bg: desaturate(lighten(#8fc17a, 18), 5);
-//$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11));
-//$sidebar-bg: desaturate(#eceff5, 8);
+//$header-bg: #263347;    //background of the header
+$subtitle-color: #FF85E0; //color of the subtitle 
+//$nav-bg: #FFF; //background of link bar 
+//$nav-bg-back: #FF85E0;
+$sidebar-bg: #FF85E0; 
 //$sidebar-link-color: saturate(#526f9a, 10);
 //$sidebar-link-color-hover: darken(#7ab662, 9);
 //$footer-bg: #ccc !default;
