--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,3 +2,10 @@
 // Add styles here to customize your blog
 // By default this file should be EMPTY!!!
 // Please edit specifications in place if you are building an other theme!
+
+
+//.entry-title h1{
+//h1.entry-title{
+//  color: #FF85E0;
+//}
+
