--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -14,28 +14,29 @@ $sidebar-bg: #FF85E0;
 
 
 /* To use the light Solarized highlighting theme uncomment the following line */
-//$solarized: light;
+$solarized: light;
 
 /* If you want to tweak the Solarized colors you can do that here */
-//$base03:          #002b36; //darkest blue
-//$base02:          #073642; //dark blue
-//$base01:          #586e75; //darkest gray
-//$base00:          #657b83; //dark gray
-//$base0:           #839496; //medium gray
-//$base1:           #93a1a1; //medium light gray
+$base03:          #FFFFFF; //darkest blue
+$base02:          #073642; //dark blue
+$base01:          #000000; //darkest gray, affects the color of the ()
+$base00:          #657b83; //dark gray
+$base0:           #839496; //medium gray
+$base1:           #FF85E0; //medium light gray, affects the line numbers
 //$base2:           #eee8d5; //cream
-//$base3:           #fdf6e3; //white
-//$solar-yellow:    #b58900;
-//$solar-orange:    #cb4b16;
+$base3:           #FFFFFF; //white
+$solar-yellow:    #60C;
+$solar-orange:    #777;
 //$solar-red:       #dc322f;
-//$solar-magenta:   #d33682;
+$solar-magenta:   #FF85E0;
 //$solar-violet:    #6c71c4;
-//$solar-blue:      #268bd2;
-//$solar-cyan:      #2aa198;
-//$solar-green:     #859900;
+$solar-blue:      #CC6AB3;
+$solar-cyan:      #FF0066; //affects the integers
+$solar-green:     #FF66FF;
+
 
 
 /* Non highlighted code colors */
-//$pre-bg: $base03;
+$pre-bg: $base03;
 //$pre-border: darken($base02, 5);
 //$pre-color: $base1;
